--- a/templates/actor/vehicle-sheet.html
+++ b/templates/actor/vehicle-sheet.html
@@ -160,7 +160,13 @@
 
                             <div class="list-item">
                                 <span>Attack: </span>
-                                <span class="ranged-attack rollable button" data-roll-type="rangedAttack" data-target="{{../system.crew.bs}}" data-item-id="{{this._id}}" data-label="Ranged Attack" data-char="bs">Roll</span>
+                                {{#if this.flags.fortyk.spray}}
+                                <span class="spray-attack rollable button" data-roll-type="sprayAttack" data-item-id="{{this.id}}" data-label="Spray Attack" >Spray</span>
+                                {{else}}
+
+                                <span class="ranged-attack rollable button" data-roll-type="rangedAttack" data-target="{{../system.characteristics.bs.total}}" data-item-id="{{this.id}}" data-label="Ranged Attack" data-char="bs">Roll</span>
+
+                                {{/if}}
                             </div>
                             <div class="list-item">
                                 <span>Damage: </span>
@@ -290,12 +296,12 @@
                     <input type="text" class="combat-resources" data-target="system.crew.capacity" value="{{system.crew.capacity}}" data-dtype="String"/>
                     <div class="flexcol">
                         <div class="descrRow flexcol">
-                                <span class="char-total rollable button" data-roll-type="evasion" data-target="{{system.crew.jink}}" data-label="Jink" data-char="">Jink</span>
+                            <span class="char-total rollable button" data-roll-type="evasion" data-target="{{system.crew.jink}}" data-label="Jink" data-char="">Jink</span>
 
 
-                            </div>
+                        </div>
                         <div class="descrRow flexrow">
-                            
+
                             <div class="flexcol">
                                 <span class="char-total rollable button" data-roll-type="char" data-target="{{system.crew.ratingTotal}}" data-label="Crew Rating" data-char="">Crew Rating:</span>
                                 <span class="descrSpan"></span>
