--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -710,7 +710,9 @@
                         </div>
                         {{#if (contains power.system.class.value "psychic")}}
                         {{#if power.flags.fortyk.spray}}
-                        <label class="list-item"><span class="spray-attack rollable powerItem button" data-roll-type="sprayAttack" data-item-id="{{this.id}}" data-label="Spray Attack" >Spray</span></label>
+                        <label class="list-item">
+                            <label>Attack: </label>
+                            <span class="spray-attack rollable powerItem button" data-roll-type="sprayAttack" data-item-id="{{this.id}}" data-label="Spray Attack" >Spray</span></label>
                         {{/if}}
                         <label class="list-item">Damage: <a class="damage-roll button" data-label="{{power.name}}"data-formula="{{power.system.damageFormula.value}}" data-weapon="{{power._id}}">{{power.system.damageFormula.value}}</a></label>
                         {{else if (contains power.system.class.value "Buff/Debuff")}}
