--- a/templates/actor/actor-combat.html
+++ b/templates/actor/actor-combat.html
@@ -33,7 +33,7 @@
 
         </div>
         <div class="flex-group-center">
-            <div class="flexcol">Heavy Damage <input type="checkbox"   {{checked this.system.secChar.wounds.heavy}} disabled style="align-self: center;"> </div>
+            <div class="flexcol"><label class="resource-label">Heavy Damage</label> <input type="checkbox"   {{checked this.system.secChar.wounds.heavy}} disabled style="align-self: center;"> </div>
         </div>
         <div class="flex-group-center">
             <label for="system.secChar.fatigue.value" class="resource-label">Fatigue</label>
@@ -183,7 +183,7 @@
             </div>
             <div class="flexrow">
                 <div class="flexcol weapon-select">
-                    <span>Left Hand</span>
+                    <span class="resource-label">Left Hand</span>
                     <select class="hand-weapon" data-hand="left" id="left">
 
 
@@ -199,7 +199,7 @@
                     </select>
                 </div>
                 <div class="flexcol weapon-select">
-                    <span>Right Hand</span>
+                    <span class="resource-label">Right Hand</span>
                     <select class="hand-weapon" data-hand="right"  id="right">
 
                         <option value="" {{#if system.secChar.wornGear.weapons.[0]}}selected{{/if}}>None</option>
@@ -218,7 +218,7 @@
                 {{#each system.secChar.wornGear.extraWeapons}}
 
                 <div class="flexcol weapon-select">
-                    <label>Extra Weapon</label>
+                    <label class="resource-label">Extra Weapon</label>
                     <select class="extra-weapon" data-index="{{@index}}">
 
                         <option value="" {{#if system.secChar.wornGear.extraWeapons.[@index]}}selected{{/if}}>None</option>
@@ -491,7 +491,7 @@
             <div class="forcefield flexcol">
 
                 <span class="section-title">Force Field</span>
-                <div class="flexcol flex-group-center">
+                
                     <select class="force-field" >
 
                         <option value="" {{#if system.secChar.wornGear.forceField}}selected{{/if}}>None</option>
@@ -513,7 +513,7 @@
                     </div>
 
                     {{/if}}
-                </div>
+
             </div>
             <div class="forcefield flexcol" >
                 <span class="section-title">Armor & Absorbtion</span>
