--- a/templates/actor/knightParts/combat.html
+++ b/templates/actor/knightParts/combat.html
@@ -73,13 +73,13 @@
                     <option value="melding">Melding</option>
                     {{/select}}
                 </select>
-                <span class="char-total rollable button" data-roll-type="char" data-target="{{system.crew.ratingTotal}}" data-label="Operate" data-char="">{{system.crew.rating}}</span>
+                <span class="char-total rollable button" data-roll-type="char" data-target="{{system.crew.ratingTotal}}" data-label="Operate" data-char="">{{system.crew.ratingTotal}}</span>
 
             </div>
 
             <div class="descrRow flexcol">
                 <span class="descrSpan">Jink:</span>
-                <span class="char-total rollable button" data-roll-type="evasion" data-target="{{system.crew.jink}}" data-label="Jink" data-char="">{{system.crew.rating}}</span>
+                <span class="char-total rollable button" data-roll-type="evasion" data-target="{{system.crew.jink}}" data-label="Jink" data-char="">{{system.crew.jink}}</span>
 
 
             </div>
