fixed vehicle ranged weapon
-fixed vehicle ranged weapon attacks

--- a/templates/actor/vehicle-sheet.html
+++ b/templates/actor/vehicle-sheet.html
@@ -164,7 +164,7 @@
                                 <span class="spray-attack rollable button" data-roll-type="sprayAttack" data-item-id="{{this.id}}" data-label="Spray Attack" >Spray</span>
                                 {{else}}
 
-                                <span class="ranged-attack rollable button" data-roll-type="rangedAttack" data-target="{{../system.characteristics.bs.total}}" data-item-id="{{this.id}}" data-label="Ranged Attack" data-char="bs">Roll</span>
+                                <span class="ranged-attack rollable button" data-roll-type="rangedAttack" data-target="{{../../system.crew.bs}}" data-item-id="{{this.id}}" data-label="Ranged Attack" data-char="bs">Roll</span>
 
                                 {{/if}}
                             </div>
