--- a/templates/actor/knightParts/mech-bay.html
+++ b/templates/actor/knightParts/mech-bay.html
@@ -834,7 +834,7 @@
                     <span>Armor Weight: {{system.knight.tonnage.armor}}</span>
                 </div>
             </div>
-            <div class="info4 mechgrid-child flexcol">
+            <div class="info4 mechgrid-child">
                 {{#each system.knight.instancedComponents}}
 
 
