--- a/templates/chat/chat-test.html
+++ b/templates/chat/chat-test.html
@@ -1,5 +1,5 @@
 
-<div class="fortyk {{#unless reroll}}chat-background{{/unless}} flexcol">
+<div class="fortyk  flexcol">
 
     <span class="chat-target">{{title}}</span>
     <div class="flexrow">
