--- a/templates/actor/actor-skills.html
+++ b/templates/actor/actor-skills.html
@@ -24,7 +24,7 @@
 
     {{#if skill.system.hasChildren.value}}
 
-    <div class="skills-header grid grid-7col" name="skillheads">
+    <div class="skills-group grid grid-7col" name="skillheads">
         <a class="skillItem skill-group item-descr" data-name="{{skill.name}}" data-item-descr="{{skill.system.description.value}}" title="Skill Use: {{skill.system.skillUse.value}}">{{skill.name}}</a>
 
         <a class="skillItem item-edit" title="Edit Skill" data-item-id="{{skill._id}}"></a>
@@ -65,11 +65,11 @@
     {{/if}}
     {{/each}}
 
-    <div class="skills-header flexrow" name="skillheads">
+    <!--<div class="skills-header flexrow" name="skillheads">
         <span class="skillItem gap"></span>
 
 
-    </div>
+    </div>-->
     {{else if (compareString skill.system.parent.value)}}
     <div class="skills-header grid grid-7col" name="skill">
 
