--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -506,6 +506,7 @@
     font-weight:bold;
     font-style:bold;
     padding:3px;
+    overflow-wrap: anywhere;
 }
 .fortyk .skills .skillItem{
     flex:1;
@@ -519,13 +520,15 @@
     font-variant-caps: petite-caps;
     grid-column: span 5;
 }
-.fortyk .skills .skills-group .skill-group:before{
-   background-image: url('https://i.pinimg.com/originals/32/35/82/32358288d7100b89936b626d7bbfcdf9.png');
+.fortyk .skills .skills-group .skill-group .item-descr:before{
+    background-image: url('https://i.pinimg.com/originals/32/35/82/32358288d7100b89936b626d7bbfcdf9.png');
     background-size: 20px 20px;
     display: inline-block;
     width: 20px; 
     height: 20px;
     content:"";
+    vertical-align: sub;
+    
     
     
 }
