--- a/templates/actor/actor-exp.html
+++ b/templates/actor/actor-exp.html
@@ -107,9 +107,10 @@
         
             <a class="item-descr list-item" data-name="{{a.name}}" data-item-descr="{{a.system.description.value}}">{{a.name}}</a>
             <label class="list-item">{{a.system.cost.value}}</label>
-           
-            <a class="list-button item-edit" title="Edit" data-item-id="{{a._id}}"></a>
-            <a class="list-button item-delete" title="Delete" data-item-id="{{a._id}}"></a>
+           <span class="list-button"><a class="list-button item-edit" title="Edit" data-item-id="{{a._id}}"></a></span>
+        <span class="list-button"><a class="list-button item-delete" title="Delete" data-item-id="{{a._id}}"></a></span>
+            
+            
        
 
         
@@ -129,8 +130,10 @@
             <a class="item-descr list-item" data-name="{{m.name}}" data-item-descr="{{m.system.description.value}}">{{m.name}}</a>
             <span class="list-item">{{m.system.exp.value}}</span>
             <span class="list-item">{{m.system.inf.value}}</span>
-            <a class="list-button item-edit" title="Edit" data-item-id="{{m._id}}"></a>
-            <a class="list-button item-delete" title="Delete" data-item-id="{{m._id}}"></a>
+        <span class="list-button"><a class="list-button item-edit" title="Edit" data-item-id="{{m._id}}"></a></span>
+        <span class="list-button"><a class="list-button item-delete" title="Delete" data-item-id="{{m._id}}"></a></span>
+            
+            
        
 
         
