--- a/templates/actor/actor-gear.html
+++ b/templates/actor/actor-gear.html
@@ -19,8 +19,10 @@
                 {{/each}}
                 {{/select}}
             </select>
-            <a class="cyberItem item-edit" title="Edit" data-item-id="{{c._id}}"></a>
-            <a class="cyberItem item-delete" title="Delete" data-item-id="{{c._id}}"></a>
+            <span class="list-button"><a class="cyberItem item-edit" title="Edit" data-item-id="{{c._id}}"></a></span>
+            <span class="list-button"><a class="cyberItem item-delete" title="Delete" data-item-id="{{c._id}}"></a></span>
+            
+            
 
 
 
@@ -50,9 +52,10 @@
             <a class="item-descr list-item drag" data-name="{{w.name}}" data-item-descr="{{w.system.description.value}}">{{w.name}}</a>
             <input type="text" class="item-text-input list-item" data-target="system.amount.value" value="{{w.system.amount.value}}" data-item-id="{{w._id}}" data-dtype="Number">
             <span class="list-item">{{w.system.weight.total}}kg</span>
-
-            <a class="list-button item-edit" title="Edit" data-item-id="{{w._id}}"></a>
-            <a class="list-button item-delete" title="Delete" data-item-id="{{w._id}}"></a>
+            <span class="list-button"><a class="list-button item-edit" title="Edit" data-item-id="{{w._id}}"></a></span>
+            <span class="list-button"> <a class="list-button item-delete" title="Delete" data-item-id="{{w._id}}"></a></span>
+            
+           
 
 
 
