--- a/templates/actor/actor-corruption.html
+++ b/templates/actor/actor-corruption.html
@@ -1,5 +1,5 @@
 <div class="sheet-corruption-insanity flexrow">
-    
+
     {{#unless actor.flags.fortyk.incorruptibledevotion}}
     <div class="corruption flexcol">
         <div class="corr-item flexrow">
@@ -22,8 +22,8 @@
             {{#each actor.malignancies as |m key|}}
 
             <a class="item-descr list-item" data-name="{{m.name}}" data-item-descr="{{m.system.description.value}}">{{m.name}}</a>
-            <a class="list-button item-edit" title="Edit Malignancy" data-item-id="{{m._id}}"></a>
-            <a class="list-button item-delete" title="Delete Malignancy" data-item-id="{{m._id}}"></a>
+            <span class="list-button"><a class="list-button item-edit" title="Edit Malignancy" data-item-id="{{m._id}}"></a></span>
+            <span class="list-button"><a class="list-button item-delete" title="Delete Malignancy" data-item-id="{{m._id}}"></a></span>
 
 
 
@@ -38,8 +38,10 @@
             {{#each actor.mutations as |m key|}}
 
             <a class="item-descr list-item" data-name="{{m.name}}" data-item-descr="{{m.system.description.value}}">{{m.name}}</a>
-            <a class="list-button item-edit" title="Edit Mutation" data-item-id="{{m._id}}"></a>
-            <a class="list-button item-delete" title="Delete Mutation" data-item-id="{{m._id}}"></a>
+            <span class="list-button"><a class="list-button item-edit" title="Edit Mutation" data-item-id="{{m._id}}"></a></span>
+            <span class="list-button"><a class="list-button item-delete" title="Delete Mutation" data-item-id="{{m._id}}"></a></span>
+            
+            
 
 
 
@@ -70,8 +72,10 @@
                 {{#each actor.disorders as |d key|}}
 
                 <a class="item-descr list-item" data-name="{{d.name}}" data-item-descr="{{d.system.description.value}}">{{d.name}}</a>
-                <a class="list-button item-edit" title="Edit Disorder" data-item-id="{{d._id}}"></a>
-                <a class="list-button item-delete" title="Delete Disorder" data-item-id="{{d._id}}"></a>
+                <span class="list-button"><a class="list-button item-edit" title="Edit Disorder" data-item-id="{{d._id}}"></a></span>
+                <span class="list-button"> <a class="list-button item-delete" title="Delete Disorder" data-item-id="{{d._id}}"></a></span>
+                
+               
 
 
 
@@ -85,12 +89,14 @@
                 <span class="list-item">Name</span>
                 <span class="list-button"></span>
                 <span class="list-button"></span>
-               
+
                 {{#each actor.injuries as |m key|}}
 
                 <a class="item-descr list-item" data-name="{{m.name}}" data-item-descr="{{m.system.description.value}}">{{m.name}}</a>
-                <a class="list-button item-edit" title="Edit Malignancy" data-item-id="{{m._id}}"></a>
-                <a class="list-button item-delete" title="Delete Malignancy" data-item-id="{{m._id}}"></a>
+                <span class="list-button"><a class="list-button item-edit" title="Edit Malignancy" data-item-id="{{m._id}}"></a></span>
+                <span class="list-button"><a class="list-button item-delete" title="Delete Malignancy" data-item-id="{{m._id}}"></a></span>
+                
+                
 
 
 
