--- a/templates/actor/actor-tnt.html
+++ b/templates/actor/actor-tnt.html
@@ -7,8 +7,10 @@
         {{#each actor.talentsntraits as |t key|}}
         
             <a class="item-descr list-item drag" data-id="{{t._id}}" data-name="{{t.name}}" data-item-descr="{{t.system.description.value}}">{{t.name}}{{#unless (compareString "N/A" t.system.specialisation.value)}} ({{t.system.specialisation.value}}){{/unless}} </a>
-            <a class="list-button item-edit" title="Edit" data-item-id="{{t._id}}"></a>
-            <a class="list-button item-delete" title="Delete" data-item-id="{{t._id}}"></a>
+        <span class="list-button"><a class="list-button item-edit" title="Edit" data-item-id="{{t._id}}"></a></span>
+        <span class="list-button"> <a class="list-button item-delete" title="Delete" data-item-id="{{t._id}}"></a></span>
+            
+           
         
 
         
