--- a/templates/actor/dialogs/spendExp-dialog-parts/psychic-power.html
+++ b/templates/actor/dialogs/spendExp-dialog-parts/psychic-power.html
@@ -1,9 +1,11 @@
 <span>Disciplines:</span>
 <select class="discipline-select">
-    <option>All</option>
+    {{#select discipline}}
+    <option value="All">All</option>
     {{#each disciplines}}
-    <option>{{this}}</option>
+    <option value="{{this}}">{{this}}</option>
     {{/each}}
+    {{/select}}
 </select>
 <div class="tntselect flexcol">
     <div class="tntgrid grid grid-8col">
@@ -13,13 +15,20 @@
         <span class="tntdescr tntheaderitem">Descr</span>
 
         {{#each psyPowers}}
+        {{debug ../this}}
+        {{#if (compareString ../discipline "All")}}
         <div class="tntitem" name="tntEntry" data-discipline="{{this.system.discipline.value}}" data-search="{{this.name}}{{this.system.tags.value}}{{this.system.aptitudes.value}}"><input type="radio" class="powercheckbox" name="power-choice"  data-compendium="fortyk.psychic-powers" value="{{this.id}}"></div>
 
         <span name="tntEntry" class="tntname tntitem" data-discipline="{{this.system.discipline.value}}" data-search="{{this.name}}{{this.system.tags.value}}">{{this.name}}</span>
         <span name="tntEntry" class="tntprereqs tntitem" data-discipline="{{this.system.discipline.value}}" data-search="{{this.name}}{{this.system.tags.value}}">{{this.system.reqs.value}}</span>
         <a name="tntEntry" class="tntdescr tntitem tntdescr-button" class="tnt-desscription" data-discipline="{{this.system.discipline.value}}" data-name="{{this.name}}" data-description="{{this.system.description.value}}" data-search="{{this.name}}{{this.system.tags.value}}">Descr</a>
+        {{else}}
+        <div {{#unless (compareString ../discipline this.system.discipline.value)}}style="display:none;"{{/unless}} class="tntitem" name="tntEntry" data-discipline="{{this.system.discipline.value}}" data-search="{{this.name}}{{this.system.tags.value}}{{this.system.aptitudes.value}}"><input type="radio" class="powercheckbox" name="power-choice"  data-compendium="fortyk.psychic-powers" value="{{this.id}}"></div>
 
-
+        <span {{#unless (compareString ../discipline this.system.discipline.value)}}style="display:none;"{{/unless}} name="tntEntry" class="tntname tntitem" data-discipline="{{this.system.discipline.value}}" data-search="{{this.name}}{{this.system.tags.value}}">{{this.name}}</span>
+        <span {{#unless (compareString ../discipline this.system.discipline.value)}}style="display:none;"{{/unless}} name="tntEntry" class="tntprereqs tntitem" data-discipline="{{this.system.discipline.value}}" data-search="{{this.name}}{{this.system.tags.value}}">{{this.system.reqs.value}}</span>
+        <a {{#unless (compareString ../discipline this.system.discipline.value)}}style="display:none;"{{/unless}} name="tntEntry" class="tntdescr tntitem tntdescr-button" class="tnt-desscription" data-discipline="{{this.system.discipline.value}}" data-name="{{this.name}}" data-description="{{this.system.description.value}}" data-search="{{this.name}}{{this.system.tags.value}}">Descr</a>
+        {{/if}}
 
 
         {{/each}}
