--- a/templates/actor/actorDH-main.html
+++ b/templates/actor/actorDH-main.html
@@ -70,14 +70,19 @@
 
         </div>
         <div class="eliteAdvances flexcol">
-            <div><span class="descrSpan">Elite Advances:</span>
+            <div>
+                <span class="descrSpan">Elite Advances:</span>
                 <input type="text" class="combat-resources" data-target="system.eliteAdvances.value" value="{{system.eliteAdvances.value}}" data-dtype="String"/>
                 <div>
                     <span class="descrSpan">Divination:</span>
                     <input type="text" class="combat-resources" data-target="system.divination.value" value="{{system.divination.value}}" data-dtype="String"/>
 
                 </div>
+                <div>
+                    <span class="descrSpan">Goal:</span>
+                    <input type="text" class="combat-resources" data-target="system.goal.value" value="{{system.goal.value}}" data-dtype="String"/>
 
+                </div>
 
             </div>
             <div class="resources flexrow">
