--- a/templates/actor/actorDH-gear.html
+++ b/templates/actor/actorDH-gear.html
@@ -3,7 +3,7 @@
         {{#if money}}
         <span class="section-title">CURRENCY</span>
         <span>Credits: <input type="text" name="system.currency.value" value="{{system.currency.value}}" data-dtype="Number"></span>
-         <span>Base Monthly Income: {{system.currency.income}} Credits</span>
+         <span>Base Income: {{system.currency.income}} Credits</span>
         {{/if}}
         
         <span class="section-title">CYBERNETICS</span>
